kube_deploy/Stag/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-stag
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp-stag
    spec:
      containers:
        - name: webapp
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-stag:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: webapp-stag
