kube_deploy/Stag/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: claim-criminal-injuries-compensation-stag
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: '100'
    external-dns.alpha.kubernetes.io/set-identifier: webapp-ingress-claim-criminal-injuries-compensation-stag-green
    # 403 - WAF blocks (e.g. SQL injection) go to custom-errors backend error page
    # 406 - Used deliberately for ModSec unknown URL blocks (rule 700020) so they
    #        go to the custom-errors backend, which serves a page mirroring the app's 404 content
    nginx.ingress.kubernetes.io/custom-http-errors: '403,406'
    nginx.ingress.kubernetes.io/default-backend: custom-errors
    nginx.ingress.kubernetes.io/enable-modsecurity: 'true'
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: '$request_id'
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:1,pass,log,tag:github_team=cica"
      SecRuleUpdateTargetById 942100 "!REQUEST_COOKIES"
      SecRuleUpdateTargetById 942100 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932110 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 933210 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 921110 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 930120 "!REQUEST_COOKIES:/session/"
      SecRuleUpdateTargetById 942230 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932100 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932105 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932150 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 942190 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 921120 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 951120 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 951240 "!RESPONSE_BODY"
      SecRuleUpdateTargetById 932115 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 942360 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 953100 "!RESPONSE_BODY"
      SecRuleUpdateTargetById 932370 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932380 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932235 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932260 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 942151 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932230 "!ARGS:/q-*/"
      SecRuleUpdateTargetById 932250 "!ARGS:/q-*/"
      SecRuleRemoveByTag "language-php"
      SecRuleRemoveByTag "platform-windows"
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABEIFKZ
      SecAuditLog /var/log/nginx/error.log
      SecAuditLogType Serial
        SecMarker BEGIN_VALID_URL_CHECK
          SecRule REQUEST_URI "@beginsWith /apply" "id:700004, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /download" "id:700005, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /address-finder" "id:700006, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /govuk-frontend" "id:700007, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /stylesheets" "id:700008, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /dist" "id:700009, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /assets" "id:700010, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /session" "id:70011, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "@beginsWith /account" "id:70012, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/cookies$" "id:700013, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/contact-us$" "id:700014, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/police-forces$" "id:700015, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/accessibility-statement$" "id:700016, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/$" "id:700017, phase:1,log,status:302,redirect:https://www.gov.uk/claim-compensation-criminal-injury/make-claim,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/.well-known/security.txt$" "id:700018, phase:1,log,status:302,redirect:https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "^/robots.txt$" "id:700019, phase:1,log,pass,skipAfter:END_VALID_URL_CHECK"
          SecRule REQUEST_URI "." "id:700020, phase:1,log,deny,status:406,skipAfter:END_VALID_URL_CHECK"
        SecMarker END_VALID_URL_CHECK
spec:
  tls:
    - hosts:
        - stag.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
    - hosts:
        - stag.claim-criminal-injuries-compensation.service.justice.gov.uk
      secretName: stag-claim-criminal-injuries-compensation-cert-secret
  ingressClassName: modsec-non-prod
  rules:
    - host: stag.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
            pathType: ImplementationSpecific
    - host: stag.claim-criminal-injuries-compensation.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
            pathType: ImplementationSpecific
